<resources>
    <string name="app_name" translatable="false">Better Internet Tiles</string>
    <string name="app_description_about">
        A unified and actually useful Internet quick-settings tile (Unlike Android 12).
    </string>
    <string name="app_description_usage">
        Tap the new Internet tile to toggle between Wi-Fi and mobile data. Respective tiles are also available, like it was before Android 12.
    </string>
    <string name="app_description_shell_access">
        Turning Wi-Fi and mobile data on/off and reading the current Wi-Fi network name requires shell access. Shizuku can take care of this without also requiring root access.
    </string>
    <string name="wifi">Wi-Fi</string>
    <string name="mobile_data">Mobile data</string>
    <string name="nfc">NFC</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="turning_on">Turning on…</string>
    <string name="not_connected">Not connected</string>
    <string name="require_unlock_key" translatable="false">require_unlock</string>
    <string name="require_unlock_title">Require unlock</string>
    <string name="require_unlock_summary">Prevent tile actions when on the lockscreen</string>
    <string name="request_shizuku_access_key" translatable="false">request_shizuku_access</string>
    <string name="request_shizuku_access_title">Request Shizuku access</string>
    <string name="request_shizuku_access_summary">Use Shizuku to grant Shell access</string>
    <string name="request_root_access_key" translatable="false">request_root_access</string>
    <string name="request_root_access_title">Request root access</string>
    <string name="request_root_access_summary">Use root to grant shell access</string>
    <string name="restart_app_key" translatable="false">restart_app</string>
    <string name="restart_app_title">Restart app</string>
    <string name="restart_app_summary">Try restarting the app if something seems wrong.</string>
    <string name="app_info_key" translatable="false">app_info</string>
    <string name="feedback_title">Feedback/report a bug</string>
    <string name="github_title">GitHub repository</string>
    <string name="xda_title">XDA Developers thread</string>
    <string name="last_connected_wifi_key" translatable="false">last_connected_wifi</string>
    <string name="settings">Settings</string>
    <string name="permissions">Permissions</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="shizuku_access_granted">Shizuku access granted.</string>
    <string name="root_access_granted">Root access granted.</string>
    <string name="root_access_denied">Could not grant root access</string>
    <string name="root_access_denied_description">Manually grant root access to \'Better Internet Tiles\' from your root management app (e.g Magisk manager).</string>
    <string name="shell_access_not_set_up">You need either root access, or Shizuku 11+ installed and running with a granted permission for this app. <a href="https://shizuku.rikka.app">https://shizuku.rikka.app</a></string>
    <string name="shell_access_required">Shell access required</string>
    <string name="hide_service_title">Hide me!</string>
    <string name="hide_service_description">This notification ensures the tiles work correctly with Shizuku. Feel free to hide it.</string>
    <string name="toast_foreground_service_error">"Could not start foreground service. Please contact the developer."</string>
    <string name="add_wifi_tile">Add Wi-Fi tile</string>
    <string name="add_wifi_tile_key" translatable="false">add_wifi_tile</string>
    <string name="add_mobile_data_tile">Add mobile data tile</string>
    <string name="add_mobile_data_tile_key" translatable="false">add_mobile_data_tile</string>
    <string name="add_internet_tile">Add Internet tile</string>
    <string name="add_internet_tile_key" translatable="false">add_internet_tile_key</string>
    <string name="add_nfc_tile">Add NFC tile</string>
    <string name="add_nfc_tile_key" translatable="false">add_nfc_tile_key</string>
    <string name="add_tiles_title">Add tiles</string>
    <string name="add_tiles_description">Add these tiles by using the shortcut buttons below! On Android 12 and below you have to do so manually from the quick-settings.</string>
    <string name="tile_added_error">Could not add the tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="require_android_13">Requires Android 13+</string>
    <string name="require_android_13_description">Manually add the tile by opening the quick-settings menu</string>
    <string name="internet">Internet</string>
    <string name="network_not_available">Network not available</string>
    <string name="no_service">No service</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="weblate" translatable="false">Weblate</string>
    <string name="help_translate">Help translate this app!</string>
    <string name="language">Language</string>
    <string name="language_key" translatable="false">language</string>
    <string name="settings_key" translatable="false">settings</string>
    <string name="add_tiles_key" translatable="false">add_tiles</string>
    <string name="tap_to_add">Tap to add</string>
    <string name="available_tiles">Available tiles</string>
    <string name="shell_method">Shell method</string>
    <string name="home">Home</string>
    <string name="app_info">App Info</string>
    <string name="version">version</string>
    <string name="shizuku" translatable="false">Shizuku</string>
    <string name="shizuku_description">Shizuku allows normal apps to use system APIs directly with elevated privileges using ADB on non-rooted devices</string>
    <string name="root" translatable="false">Root</string>
    <string name="root_description">The simplest way to retrieve shell-level access when your phone is rooted</string>
    <string name="auto">Auto</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="use_default">Use default</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="battery">battery</string>
    <string name="donate">Donate</string>
    <string name="donate_summarry">Show your support via a donation</string>

    <string name="good_to_go">Good to go!</string>
    <string name="good_to_go_description">All needed permissions are granted, check out the available tiles below!</string>

    <string name="missing_permissions">Missing permissions</string>
    <string name="missing_permissions_description">Some things might not work as expected. Expand for more info.</string>
    <string name="shell_access">Shell access</string>
    <string name="shell_access_description">Shell access is needed to enable/disable certain system features. You can use either root or Shizuku to do this.</string>
    <string name="location">Location</string>
    <string name="location_description">The \'exact location\' permission is required to read out the name of the current connected Wi-Fi network</string>
    <string name="read_phone_state">Read phone state</string>
    <string name="read_phone_state_description">The \'read phone state\' permission is required to read the mobile data connection info.</string>
    <string name="bluetooth_connect">Bluetooth connect</string>
    <string name="bluetooth_connect_description" >The \'bluetooth connect\' permission is required to read out the connected bluetooth device name.</string>
    <plurals name="used_for_tiles">
        <item quantity="one">Used for %1$s tile</item>
        <item quantity="other">Used for %1$s tiles</item>
    </plurals>
    <string name="allow_root_access">Allow root access</string>
    <string name="allow_root_access_description">Please allow root access for the \'Better Internet Tiles\' application in your root management application (e.g. Magisk Manager)</string>
    <string name="allow_shizuku_access">Allow Shizuku access</string>
    <string name="allow_shizuku_access_description">Please make sure that the \'Better Internet Tiles\' is granted access to the Shizuku application and that the Shizuku process is running</string>
    <string name="auto_start_shizuku_description">Did you know you can automatically start Shizuku when your device boots up, no root required? Check out $$this reddit thread$$ for more information on how to set this up.</string>

</resources>
