<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:text="@string/about"
        android:title="@string/about">

        <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/app_description_about"/>

        <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/app_description_usage"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:text="@string/settings"
        android:title="@string/settings">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_lock_24"
            android:key="@string/require_unlock_key"
            android:summary="@string/require_unlock_summary"
            android:title="@string/require_unlock_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:text="@string/permissions"
        android:title="@string/permissions">

        <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/app_description_shell_access"/>
        <Preference
            android:icon="@drawable/shizuku"
            android:key="@string/request_shizuku_access_key"
            android:summary="@string/request_shizuku_access_summary"
            android:title="@string/request_shizuku_access_title" />
        <Preference
            android:icon="@drawable/magisk_24"
            android:key="@string/request_root_access_key"
            android:summary="@string/request_root_access_summary"
            android:title="@string/request_root_access_title" />

    </PreferenceCategory>
    <PreferenceCategory
        android:text="@string/other"
        android:title="@string/other">
        <Preference
            android:icon="@drawable/ic_baseline_loop_24"
            android:key="@string/restart_app_key"
            android:summary="@string/restart_app_summary"
            android:title="@string/restart_app_title" />
        <Preference
            android:icon="@drawable/ic_outline_info_24"
            android:key="@string/app_info_key"
            android:title="@string/app_info_title" />
        <Preference
            android:icon="@drawable/github_24"
            android:key="@string/github_key"
            android:title="@string/github_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/CasperVerswijvelt/Better-Internet-Tiles" />
        </Preference>
        <Preference
            android:icon="@drawable/xda"
            android:key="@string/xda_key"
            android:title="@string/xda_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/t/better-internet-tiles-bring-back-wi-fi-and-mobile-data-toggles-non-root.4373925/" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>